--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,15 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/bg_orange"
         android:background="@drawable/bg_jianbian" />
-
-
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -49,7 +48,7 @@
                     android:gravity="center" />
             </RelativeLayout>
 
-            
+
             <ImageView
                 android:id="@+id/tv_icon"
                 android:layout_width="50dp"
@@ -85,6 +84,7 @@
 
 
             <LinearLayout
+                android:id="@+id/ll_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -139,7 +139,155 @@
 
 
             </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <RelativeLayout
+                android:id="@+id/tl_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_round10dp_white"
+                android:paddingTop="18dp"
+                android:paddingBottom="26dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ll_1">
+
+
+                <TextView
+                    android:id="@+id/tv_order"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_282525"
+                    android:layout_marginLeft="10dp"
+                    android:textStyle="bold"
+                    android:textSize="17sp"
+                    android:text="我的订单"/>
+
+
+                <TextView
+                    android:id="@+id/tv_order_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:textColor="@color/color_7C7877"
+                    android:layout_alignParentRight="true"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    android:textSize="12sp"
+                    android:text="全部订单"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:layout_below="@+id/tv_order"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_daizhifu"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:drawablePadding="10dp"
+                        android:drawableTop="@drawable/icon_daizhifu"
+                        android:layout_height="wrap_content"
+                        android:textSize="13sp"
+                        android:textColor="@color/color_3B3838"
+                        android:text="待支付"/>
+
+                    <TextView
+                        android:id="@+id/tv_daishouhuo"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:drawablePadding="10dp"
+                        android:drawableTop="@drawable/icon_daishouhuo"
+                        android:layout_height="wrap_content"
+                        android:textSize="13sp"
+                        android:textColor="@color/color_3B3838"
+                        android:text="待支付"/>
+                    <TextView
+                        android:id="@+id/tv_daipingjia"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:drawablePadding="10dp"
+                        android:drawableTop="@drawable/icon_daipingjia"
+                        android:layout_height="wrap_content"
+                        android:textSize="13sp"
+                        android:textColor="@color/color_3B3838"
+                        android:text="待支付"/>
+                    <TextView
+                        android:id="@+id/tv_shouhou"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:drawablePadding="10dp"
+                        android:drawableTop="@drawable/icon_shouhoutuikuan"
+                        android:layout_height="wrap_content"
+                        android:textSize="13sp"
+                        android:textColor="@color/color_3B3838"
+                        android:text="售后/退款"/>
+
+                </LinearLayout>
+            </RelativeLayout>
+
+            <include layout="@layout/item_orderdetail_head_card"
+                android:id="@+id/view_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/bg_round10dp_white"
+                android:layout_marginTop="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tl_2"/>
+
+
+            <LinearLayout
+                android:id="@+id/ll_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:paddingTop="18dp"
+                android:paddingBottom="28dp"
+                android:background="@drawable/bg_round10dp_white"
+                app:layout_constraintTop_toBottomOf="@+id/view_3">
+
+
+                <TextView
+                    android:id="@+id/tv_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_282525"
+                    android:layout_marginLeft="10dp"
+                    android:textStyle="bold"
+                    android:textSize="17sp"
+                    android:text="更多功能"/>
+
+                <com.bee.user.widget.MyGridView
+                    android:id="@+id/gridview"
+                    android:scrollbars="none"
+                    android:layout_marginTop="20dp"
+                    android:cacheColorHint="@color/white"
+                    android:numColumns="4"
+                    android:verticalSpacing="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+
+            <View
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ll_2"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </FrameLayout>
