--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,15 +44,12 @@
                     android:paddingRight="10dp">
 
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/icon_dingwe_bai" />
-
                     <TextView
+                        android:id="@+id/tv_dingwei"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
+                        android:drawableLeft="@drawable/icon_dingwe_bai"
+                        android:drawablePadding="8dp"
                         android:text="上海市"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
