--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,14 @@
         <item name="android:windowAnimationStyle">@style/Animation_Activity</item>
     </style>
 
+    <style name="MainTheme" parent="DefaultCityPickerTheme">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:windowAnimationStyle">@style/Animation_Activity</item>
+    </style>
 
 
     <style name="AppThemeTranslucent" parent="AppTheme">
