--- a/app/src/main/res/layout/dialog_order_detail_cancel_confirm.xml
+++ b/app/src/main/res/layout/dialog_order_detail_cancel_confirm.xml
@@ -51,6 +51,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_cancer"
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:textSize="17sp"
@@ -60,6 +61,7 @@
             android:text="申请取消"/>
 
         <TextView
+            android:id="@+id/tv_contact"
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:textSize="17sp"
