--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -206,7 +206,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="13sp"
                         android:textColor="@color/color_3B3838"
-                        android:text="待支付"/>
+                        android:text="配送中"/>
                     <TextView
                         android:id="@+id/tv_daipingjia"
                         android:layout_width="0dp"
@@ -217,7 +217,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="13sp"
                         android:textColor="@color/color_3B3838"
-                        android:text="待支付"/>
+                        android:text="待评价"/>
                     <TextView
                         android:id="@+id/tv_shouhou"
                         android:layout_width="0dp"
