--- a/app/src/main/res/layout/activity_select_location.xml
+++ b/app/src/main/res/layout/activity_select_location.xml
@@ -68,12 +68,12 @@
             android:id="@+id/tv_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="上海"
-            android:textSize="12sp"
-            android:drawablePadding="10dp"
+            android:layout_marginLeft="15dp"
             android:drawableRight="@drawable/icon_jiantou_xia"
+            android:drawablePadding="10dp"
+            android:text="上海"
             android:textColor="@color/color_3B3838"
-            android:layout_marginLeft="15dp"/>
+            android:textSize="12sp" />
         
         <View
             android:layout_width="1dp"
@@ -132,6 +132,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_location_area"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
@@ -148,6 +149,7 @@
                     android:layout_weight="1"/>
 
                 <TextView
+                    android:id="@+id/tv_reLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
@@ -215,6 +217,7 @@
                     android:layout_height="1px"
                     android:layout_weight="1"/>
                 <TextView
+                    android:id="@+id/tv_more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_7C7877"
