--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:windowAnimationStyle">@style/Animation_Activity</item>
     </style>
 
-    <style name="MainTheme" parent="DefaultCityPickerTheme">
+    <style name="CityPickerTheme" parent="DefaultCityPickerTheme">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
