--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_F5F5F5">
+    android:background="@color/white">
 
 
 
@@ -12,16 +12,16 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="0dp"
         android:background="@drawable/btn_gradient_yellow"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-
 
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:minHeight="20dp"
             app:expandedTitleMarginEnd="48dp"
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -31,7 +31,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
+                <View
+                    android:id="@+id/status_bar1"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -135,7 +138,6 @@
             android:layout_height="60dp"
             android:background="@drawable/bg_topround30dp_white"
             android:gravity="center_vertical"
-            android:minHeight="?android:attr/actionBarSize"
             android:orientation="vertical">
 
 
@@ -185,6 +187,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/color_F5F5F5"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
