--- a/app/src/main/res/layout/fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/fragment_chart_nodata.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <View
+        android:id="@+id/status_bar1"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="25dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/bg_white_grey"
+        android:layout_below="@+id/status_bar1"
         android:background="@drawable/bg_gradient_white_grey" />
 
     <LinearLayout
         android:id="@+id/ll_nonet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/status_bar1"
         android:orientation="vertical"
         android:visibility="gone">
 
@@ -61,6 +68,7 @@
         android:id="@+id/ll_nodata"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/status_bar1"
         android:orientation="vertical">
 
         <TextView
@@ -87,6 +95,7 @@
         android:id="@+id/ll_havedata"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/status_bar1"
         android:orientation="vertical">
 
         <TextView
@@ -216,4 +225,4 @@
             android:layout_height="match_parent" />
 
     </RelativeLayout>
-</FrameLayout>
+</RelativeLayout>
