--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -16,6 +16,16 @@
         android:layout_height="wrap_content"
         android:scrollbars="none">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <View
+                android:id="@+id/status_bar1"
+                android:layout_width="match_parent"
+                android:layout_height="25dp" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:paddingTop="5dp"
             android:layout_width="match_parent"
@@ -289,5 +299,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </FrameLayout>
