--- a/app/src/main/res/layout/fragment_nearby_list.xml
+++ b/app/src/main/res/layout/fragment_nearby_list.xml
@@ -4,8 +4,15 @@
     android:layout_height="match_parent">
 
     <View
+        android:id="@+id/status_bar1"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="25dp" />
+
+    <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/bg_white_grey"
+        android:layout_below="@+id/status_bar1"
         android:background="@drawable/bg_gradient_white_grey"/>
 
 
@@ -13,6 +20,7 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/status_bar1"
         android:paddingLeft="10dp"
         android:paddingTop="15dp"
         android:paddingBottom="10dp"
