--- a/app/src/main/res/layout/fragment_store_1.xml
+++ b/app/src/main/res/layout/fragment_store_1.xml
@@ -2,6 +2,7 @@
 <com.kunminx.linkage.LinkageRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/color_F5F5F5"
     android:id="@+id/linkage"
     android:layout_marginTop="10dp">
 
