--- a/app/src/main/res/layout/item_store_food.xml
+++ b/app/src/main/res/layout/item_store_food.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/iv_goods_item"
     android:paddingTop="10dp"
+    android:background="@color/white"
     android:paddingBottom="10dp"
     android:layout_height="wrap_content">
 
