--- a/app/src/main/res/layout/item_buy_peisong_card.xml
+++ b/app/src/main/res/layout/item_buy_peisong_card.xml
@@ -9,7 +9,7 @@
         android:id="@+id/iv_bg"
         android:layout_width="95dp"
         android:layout_height="150dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/bg_round10dp_white"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -81,4 +81,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_text3"/>
+
+    <TextView
+        android:id="@+id/tv_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="10sp"
+        android:visibility="gone"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingBottom="2dp"
+        android:paddingTop="2dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:background="@drawable/biaoqian"
+        app:layout_constraintRight_toRightOf="@+id/iv_bg"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
